RESOLVED FIXED183496
ServiceWorker should respect IDB and DOMCache partitioning
https://bugs.webkit.org/show_bug.cgi?id=183496
Summary ServiceWorker should respect IDB and DOMCache partitioning
youenn fablet
Reported 2018-03-08 22:29:26 PST
Currently, they are always using first party partitions
Attachments
Patch (9.24 KB, patch)
2018-03-08 22:36 PST, youenn fablet
no flags
youenn fablet
Comment 1 2018-03-08 22:36:14 PST
EWS Watchlist
Comment 2 2018-03-08 22:38:27 PST
Attachment 335395 [details] did not pass style-queue: ERROR: Source/WebCore/workers/service/context/ServiceWorkerThread.cpp:74: Missing spaces around : [whitespace/init] [4] Total errors found: 1 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Radar WebKit Bug Importer
Comment 3 2018-03-08 22:40:23 PST
WebKit Commit Bot
Comment 4 2018-03-09 13:47:36 PST
Comment on attachment 335395 [details] Patch Clearing flags on attachment: 335395 Committed r229483: <https://trac.webkit.org/changeset/229483>
WebKit Commit Bot
Comment 5 2018-03-09 13:47:37 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.