ServiceWorker should respect IDB and DOMCache partitioning https://bugs.webkit.org/show_bug.cgi?id=183496

Reviewed by Brady Eidson.

Source/WebCore:

Test: http/wpt/service-workers/third-party-registration.html

Set the correct top origin of service worker ScriptExecutionContext.

* workers/service/context/ServiceWorkerThread.cpp:
(WebCore::ServiceWorkerThread::ServiceWorkerThread):

LayoutTests:

* http/wpt/service-workers/resources/third-party-registration-frame.html: Added.
* http/wpt/service-workers/resources/third-party-worker.js: Added.
* http/wpt/service-workers/third-party-registration-expected.txt: Added.
* http/wpt/service-workers/third-party-registration.html: Added.


Canonical link: https://commits.webkit.org/199185@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229483 268f45cc-cd09-0410-ab3c-d52691b4dbfc